--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,6 +1,5 @@
-# powerline
-source '/usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf'
-
+# highly unlikely that it works for every tmux version...
+# manual tweaking may be necessary!
 # setting the correct term (unnecessary?)
 set -g default-terminal "tmux"
 set -g focus-events on
@@ -28,14 +27,17 @@ setw -g pane-base-index 1
 set -g mouse on
 bind-key m set-option -g mouse on \; display 'Mouse: ON'
 bind-key M set-option -g mouse off \; display 'Mouse: OFF'
+bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; copy-mode -e; send-keys -M"
+bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
-# misch
+# misc
 setw -g monitor-activity on
 set -g visual-activity on
 set -g history-limit 10000
 
 #### vim functionality ###
-set -g mode-keys vi
+setw -g mode-keys vi
+set -g status-keys vi
 
 # moving between panes with vim movement keys
 bind h select-pane -L
@@ -44,23 +46,23 @@ bind k select-pane -U
 bind l select-pane -R
 
 # Copy Paste
-bind-key -T copy-mode-vi 'v' send -X begin-selection;
-bind-key -T copy-mode-vi 'v' send -X begin-selection; 
-bind-key -T copy-mode-vi 'V' send -X select-line;
-bind-key -T copy-mode-vi 'r' send -X rectangle-toggle; 
-bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'
+# it's inconsistent between based on version
+run-shell "tmux setenv -g TMUX_VERSION $(tmux -V | cut -c 6-)"
+if-shell -b '[ "$(echo "$TMUX_VERSION < 2.1" | bc)" = 1 ]' \
+  "bind-key Escape copy-mode; \
+  bind-key -t vi-copy Escape cancel; \
+  bind-key p paste-buffer; \
+  bind-key -t vi-copy v begin-selection; \
+  bind-key -t vi-copy V select-line; \
+  bind-key -t vi-copy r rectangle-toggle; \
+  bind -t vi-copy y copy-pipe 'xclip -in -selection clipboard'"
 
-# bind Escape copy-mode
-# unbind p
-# bind p paste-buffer
-# bind -t vi-copy 'v' begin-selection
-# bind -t vi-copy 'y' copy-selection
-# bind -t vi-copy 'Space' halfpage-down
-# bind -t vi-copy 'Bspace' halfpage-up
+if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.1" | bc)" = 1 ]' \
+  "bind-key -T copy-mode-vi 'v' send -X begin-selection; \
+  bind-key -T copy-mode-vi 'V' send -X select-line; \
+  bind-key -T copy-mode-vi 'r' send -X rectangle-toggle; \
+  bind-key -T copy-mode-vi 'y' send -X copy-pipe-and-cancel 'xclip -in -selection clipboard'"
 
-# # extra commands for interacting with the ICCCM clipboard
-# bind-key -t vi-copy y copy-pipe "xclip -i -sel clip > /dev/null"
-# bind-key p run "xclip -o -sel clip | tmux load-buffer - ; tmux paste-buffer"
 
 # moving between windows with vim movement keys
 bind -r C-h select-window -t :-
@@ -73,11 +75,14 @@ bind -r K resize-pane -U 5
 bind -r L resize-pane -R 5
 
 # source config
-bind R source-file ~/.tmux.conf
+bind R source-file ~/.tmux.conf \; display-message "Config reloaded..."
+
+# local configurations
+if-shell "[ -f ~/.tmux_local.conf ]" 'source ~/.tmux_local.conf'
 
 # Plugins
 # List of plugins
-set -g @plugin 'tmux-plugins/tpm'
+# set -g @plugin 'tmux-plugins/tpm'
 #set -g @plugin 'tmux-plugins/tmux-sensible'
 
 # Other examples:
@@ -86,4 +91,6 @@ set -g @plugin 'tmux-plugins/tpm'
 # set -g @plugin 'git@bitbucket.com/user/plugin'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-run '~/.tmux/plugins/tpm/tpm'
+# run '~/.tmux/plugins/tpm/tpm'
+
+
