--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -1,7 +1,7 @@
 # highly unlikely that it works for every tmux version...
 # manual tweaking may be necessary!
 # setting the correct term (unnecessary?)
-set -g default-terminal "tmux"
+# set -g default-terminal "tmux"
 set -g focus-events on
 
 # Prefix is Ctrl-a
