--- a/meta/configs/zsh.yaml
+++ b/meta/configs/zsh.yaml
@@ -1,7 +1,9 @@
+- shell:
+    - [curl -L git.io/antigen > zsh/antigen.zsh]
+
 - link:
+    ~/.antigen.zsh: zsh/antigen.zsh
     ~/.zshenv: zsh/zshenv
     ~/.zshrc: zsh/zshrc
     ~/.zsh_aliases: zsh/zsh_aliases
 
-- shell:
-    - [curl -L git.io/antigen > zsh/antigen.zsh]
