--- a/meta/configs/zsh.yaml
+++ b/meta/configs/zsh.yaml
@@ -1,5 +1,5 @@
 - shell:
-    - [curl -L git.io/antigen > zsh/antigen.zsh]
+    - [curl -L git.io/antigen > zsh/antigen.zsh, Installing Antigen]
 
 - link:
     ~/.antigen.zsh: zsh/antigen.zsh
