--- a/tmux/tmux.conf
+++ b/tmux/tmux.conf
@@ -31,9 +31,13 @@ bind-key -T root WheelUpPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "
 bind-key -T root WheelDownPane if-shell -F -t = "#{alternate_on}" "send-keys -M" "select-pane -t =; send-keys -M"
 
 # misc
+set -g history-limit 5000
+
+# display
 setw -g monitor-activity on
+setw -g automatic-rename on  # rename windows to current program
+setw -g renumber-windows on  # renumber when window is closed
 set -g visual-activity on
-set -g history-limit 10000
 
 #### vim functionality ###
 setw -g mode-keys vi
