--- a/meta/configs/vim.yaml
+++ b/meta/configs/vim.yaml
@@ -1,10 +1,9 @@
-- shell:
-    - mkdir -p vim/vim/bundle
-    - [curl -fLo vim/vim/autoload/plug.vim --create-dirs "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim", Downlading vim-plug]
-
 - link:
-    ~/.vim: vim/vim
     ~/.vimrc: vim/vimrc
+
+- shell:
+    - [curl -fLo ~/.vim/autoload/plug.vim --create-dirs "https://raw.githubusercontent.com/junegunn/vim-plug/master/plug.vim", Downlading vim-plug]
+    - mkdir -p ~/.vim/bundle
 
 - shell:
     - [vim -c 'PluginInstall' +qall, Installing vim plugins]
